--- a/styles/style.css
+++ b/styles/style.css
@@ -155,11 +155,31 @@ ul {
     margin-left: auto;
 }
 
-.complete-order-btn {
+.complete-order-btn,
+.modal form button {
     display: block;
     margin-top: 53px;
     padding: 18px 0;
     width: 100%;
+    border: none;
+    border-radius: 3px;
+    background: #16DB99;
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #fff;
+    cursor: pointer;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
 }
 
 .modal {
@@ -172,8 +192,42 @@ ul {
     bottom: 0;
     background-color: aliceblue;
     margin: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 30px 23px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    z-index: 101;
+
+}
+
+.modal h2 {
+    margin: 30px 0 50px;
+}
+
+.modal form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 23px;
+}
+
+.modal form input {
+    width: 100%;
+    height: 71px;
+    padding-left: 26px;
+    font-size: 20px;
+    color: #000;
+}
+
+.modal form button {
+    /* margin-top: auto; */
+    justify-self: auto;
 }
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
