--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 
 body {
     width: 600px;
+    margin: 0 auto;
     border: 1px solid black;
     font-family: "Smythe", system-ui;
 }
@@ -98,7 +99,6 @@ ul {
 
 .order-section {
     padding-top: 50px;
-    /* display: none; */
 }
 
 .order-section h3 {
@@ -226,6 +226,22 @@ ul {
 .modal form button {
     /* margin-top: auto; */
     justify-self: auto;
+}
+
+.order-success {
+    width: 100%;
+    height: 120px;
+    background-color: #ECFDF5;
+    border-radius: 3px;
+    color: #065F46;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.order-success h2 {
+    font-size: 32px;
+    font-weight: 400;
 }
 
 .hidden {
